authed/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authed
spec:
  type: ClusterIP
  selector:
    app: authed
  ports:
    - port: 8080
